--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "dev_server_starter",
   "version": "1.0.0",
   "description": "Node/Express server for development",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "start": "node ./dist/server.js",
-    "develop": "npm run build && npm start"
+    "server": "npm run build && npm start"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "webpack": "^3.10.0"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^2.30.1",
     "source-map-loader": "^0.2.3",
     "typescript": "^2.6.2"
   }
